2002-11-12 M Pollard <circlemaster@blueyonder.co.uk>
        * configure.ac: modernised the syntax

2002-11-11 M Pollard <circlemaster@blueyonder.co.uk>
	* StateManager.cpp, StateManager.h: Begun work on new format here.

	* StateManagerTest.cpp: Fixed this up so that it should work now,
	  however I haven't readded it to the build as I want to complete
	  StateManager first.
	
	* configure.ac: made cppunit default on but given ability to turn off;
	                added libxml2.

	* NEWS: added mention of statemanager work.

2002-10-10 M Pollard <circlemaster@blueyonder.co.uk>
        * test/Makefile.am, StateManagerTest.cpp, TestServices.cpp: cut
	  out StateManager from the tests till I've finished redoing it.

	* StateManager.cpp, StateManager.h: stripping this down, need to
	  do things another way.

	* Label.h, Console.cpp, Console.h: Changed FONT_FILE to a static
	  const char* const, changed to wf_opal.ttf.

	* configure.ac: bumped required sigc++-1.2 version to 1.2.1 .
	
2002-10-10 M Pollard <circlemaster@blueyonder.co.uk>
	* autogen.sh, NEWS: Made automake do automake --gnu and added needed
	  files.
	
	* configure.ac: added AM_MAINTAINER_MODE.

	* dime.spec.in: tweaked a bit to add docs and build right.

2002-10-09 M Pollard <circlemaster@blueyonder.co.uk>
	* All of the Makefile.am's: Fixed these to allow make dist.

	* src/services/font/Font.h: Changed font strings to basic_string
	<wchar_t> rather than wstring due to gcc 2.95 issues.

2002-10-10 Al Riddoch <alriddoch@zepler.org>
	* src/services/font/Font.h: std:: namespace fix.

2002-10-09 Al Riddoch <alriddoch@zepler.org>
	* src/services/server/OOGChat.cpp: Fix connecting of disappearance
	  method to Disappearance signal. Get rid of trailing "0" on
	  some console messages.

	* src/main/Dime.cpp: std:: namespace fix.

2002-10-09 Al Riddoch <alriddoch@zepler.org>
	* src/services/font/Font.h: Use standard std::wstring for font strings.

2002-10-07 Al Riddoch <alriddoch@zepler.org>