@@ -25,6 +25,36 @@
 
 using namespace dime;
 
+StateManager::StateManager(const std::string& stateFile)
+  : myStateFile(stateFile), myStateDoc(NULL)
+{
+  // Load the XML Document containing the States
+  xmlNodePtr cur;
+
+  myStateDoc = xmlParseFile(myStateFile.c_str());
+  if (!myStateDoc)
+    {
+      xmlFreeDoc(myStateDoc);
+      throw "Missing State Doc";
+    }
+
+  cur = xmlDocGetRootElement(myStateDoc);
+
+  if (!cur)
+    {
+      xmlFreeDoc(myStateDoc);
+      throw "Empty State Doc";
+    }
+
+  if (xmlStrcmp(cur->name, (const xmlChar *) "states"))
+    {
+      xmlFreeDoc(myStateDoc);
+      throw "document of the wrong type, root node != states";
+    }
+  // OK if we're here then we've loaded the doc
+}
+
+
 xmlNodePtr StateManager::findState(const std::string& state)
 {
   xmlNodePtr cur = xmlDocGetRootElement(myStateDoc)->xmlChildrenNode;
